# jupyter_to_deploy

./: README.md  main.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: main.yml
tests/: tests.py
